tests/build/cases/widget/not_allowed_in_when3.stderr
error: property `foo` is not allowed in when
  --> cases/widget/not_allowed_in_when3.rs:24:19
   |
24 |         when *#foo.is() && *#is_pressed {
   |                   ^^^
